# beauty_saloon_bot

./: .gitignore  README.md  alembic_template.ini  pyproject.toml  template_alembic_ini
bot/: __main__.py  _env  env_template
bot/commands/: __init__.py  about_servises.py  contacts.py  create_design.py  feedback.py  help.py  promotions.py  registration.py  service_commands.py  services_options.py  start.py
bot/db/: __init__.py  base.py  engine.py  feedback.py  users.py
bot/db/migrations/: env.py
bot/db/migrations/versions/: 03fb5f710bdb_initial_com.py  2e3150ef3b15_initial_com2.py  4b594d6742cc_initial_com6.py  5592497d6364_update_base_model.py  9f9ed24c64f8_initial_com5.py  ac1fc5c516e9_update_user_id_with_bigint.py  ee293b8861d8_initial_com4.py  fdc9d6268f1c_initial_com3.py
bot/middlewares/: register_check.py
bot/services/: bitly.py  services_class.py
