[tool.poetry]
name = "beauty-saloon-bot"
version = "0.1.0"
description = ""
authors = ["korchaginks <kkonstantinserg@gmail.com>"]
readme = "README.md"
packages = [{include = "beauty_saloon_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.1.1"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.22"
asyncpg = "^0.28.0"
greenlet = "^3.0.0"
pydantic = "2.3"
redis = "^5.0.1"
alembic = "^1.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
